# myapps-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure
cmake/: build-config.cmake  build-libzip.cmake  build-lz4.cmake  build-replxx.cmake  build-snappy.cmake  build-yaml.cmake  find-boost.cmake  find-fuse.cmake  find-openssl.cmake
cpack/: readme.txt
cpack/wix/: CMakeLists.txt  bundle.wxs.in  custom_action_dll.wxs.in  myapps.wxs  ola.wxs  service.patch
cpack/wix/custom_action/: CMakeLists.txt  exports.def  install_exports.def  install_validations.cpp  uninstall_cleanup.cpp
example/basic/: CMakeLists.txt  example_basic.build  example_basic.build.yml  example_basic.media  example_basic.media.yml  example_basic_win.cpp  ola_upload  upload
file_monitor/: CMakeLists.txt  file_monitor.hpp
file_monitor/src/: file_monitor_win.cpp
file_monitor/test/: CMakeLists.txt  test_file_monitor_basic.cpp
myapps/client/auth/: CMakeLists.txt  about_form.ui  amend_form.ui  auth_main.cpp  auth_protocol.hpp  create_form.ui  home_form.ui  main_form.qrc  main_form.ui  main_window.cpp  main_window.hpp  reset_form.ui
myapps/client/cli/: CMakeLists.txt  client_cli.cpp
myapps/client/service/: CMakeLists.txt  engine.cpp  engine.hpp  file_cache.cpp  file_cache.hpp  file_data.cpp  file_data.hpp  filesystem_service.cpp  ola_client_service.cpp  passthrough.c  passthrough.cpp  passthrough_c.cpp  shortcut_creator.cpp  shortcut_creator.hpp  test_security.cpp
myapps/client/service/test/: CMakeLists.txt  test_file_cache.cpp  test_file_cache_file.cpp  test_file_namefy.cpp
myapps/client/updater/: CMakeLists.txt  resource.h  updater.build.yml.in  updater_win.cpp  upload.in
ola/client/: CMakeLists.txt
ola/client/auth/: CMakeLists.txt  about_form.ui  amend_form.ui  auth_form.ui  auth_main.cpp  auth_main.rc  auth_widget.cpp  auth_widget.hpp  create_form.ui  home_form.ui  main_form.qrc  main_form.ui  main_window.cpp  main_window.hpp  reset_form.ui  validate_form.ui
ola/client/cli/: CMakeLists.txt  ola_client_cli.cpp
ola/client/gui/: CMakeLists.txt  gui_auth_form.ui  gui_auth_widget.cpp  gui_auth_widget.hpp  gui_main.cpp  gui_protocol.hpp
ola/client/service/: CMakeLists.txt  engine.cpp  engine.hpp  file_cache.cpp  file_cache.hpp  file_data.cpp  file_data.hpp  filecache.cpp  filecache.hpp  ola_client_service.cpp  passthrough.cpp  passthrough_c.cpp  shortcut_creator.cpp  shortcut_creator.hpp  test_security.cpp
ola/client/service/test/: CMakeLists.txt  test_file_cache.cpp  test_file_cache_file.cpp  test_file_namefy.cpp
ola/client/updater/: CMakeLists.txt  ola_upload  ola_upload.in  updater.build.yml.in  updater_win.cpp
ola/client/utility/: arrvec.hpp  locale.hpp
ola/client/utility/src/: auth_file.cpp
prerequisites/: build  build.sh
updater/: CMakeLists.txt  resource.rc  updater_win.cpp
